--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   
   <title>Rock, Paper, Scissors</title>
   <link rel="stylesheet" href="./dist/css/style.css">
+  <link rel="stylesheet" href="./dist/css/screens.css">
 </head>
 <body>
   <div class="main__background">
