Removed the multiplayer mode from the UI since it's not availaible yet

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       <div class="player__mode">
         <div class="single__player pick">Single Player</div>
-        <div class="multi__player pick">Multi Player</div>
+        <!-- <div class="multi__player pick">Multi Player</div> -->
       </div>
 
       <!-- <div class="rules__display">
